up date handler & define